<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="Selamat Datang"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        android:onClick="daftarBtnClicked"
        android:text="@string/daftar"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_atau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_daftar"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="@string/atau"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_atau"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:onClick="masukBtnClicked"
        android:text="@string/masuk"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>